Release_1.8.0
New Features:
Add support for F1240 Archive Tier Support
Changes:
Fixed request log to print correct scheme (HTTP/HTTPS) based on setting in config file
Add units for client read, write throughput and connect, so timeout

Release_1.7.0
New Features:
Add support for s3 listing v2
Record object-size for metadata request in request log

Release 1.6.1
New Features:
Add Object prefix configuration in retention extenstion

Release 1.6.0
New Features:
Add Retention Extension support
Changes:
Prune summary output in console log

Release 1.5.0
Changes:
Added IAM authentication mode. HTTPS scheme is required for this feature.
Valid tokens have to be provided to OG since automatic token refreshing is not yet supported.

Release 1.4.2
Changes:
Add content-md5 header in Multipart Complete request.
Send Multipart Abort if part upload returns error
Do not remove object from ObjectManager if DELETE response code is not 204.
Fix Object name corruption while borrowing objects from other object file during object file persistence.
Add deleted_object_length for DELETE operation in request.log
Update userguide: content_md5, write_legalhold, delete_legalhold, read_legalhold operations, secure connections.

Release 1.4.1
Changes:
Fix defect in ObjectManager. When a partially written object file is used, the version header was appended
to it. This caused object to be interpreted incorrectly and corrupted. The version header is added only for
a new object file.

Release 1.4.0
New Features:
Support WORM operations
New operations added Add Legalhold,  Delete Legalhold, Read Legalholds, Write retention

Changes:
custom fileSize config per operation
Updated write operation to include optional legalhold or retention period
Object Manager adds a new version header field to track the object file version.
The current version is 2.0. Two new fields have been to add to the object - no. of legalholds and
retention period.