@@ -4,7 +4,7 @@
   <parent>
     <artifactId>og</artifactId>
     <groupId>com.ibm</groupId>
-    <version>1.8.0</version>
+    <version>1.8.1</version>
   </parent>
   <artifactId>og-scheduling</artifactId>
   <name>Scheduling</name>
