@@ -1,3 +1,7 @@
+Release_1.8.1
+Changes:
+Add null check for DETELE and METADATA object size when logging to request log file
+
 Release_1.8.0
 New Features:
 Add support for F1240 Archive Tier Support
